ai suggestion +final touches

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 spring.jackson.serialization.fail-on-empty-beans=false
+
+huggingface.api-key=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
+huggingface.model=mixtral-7b-instruct-v0.3
+huggingface.endpoint=https://api-inference.huggingface.co/models/mistralai/Mixtral-7B-Instruct-v0.3
+logging.level.org.springframework=DEBUG
+logging.level.soprahr.foryou_epm_backend.Service=INFO
